--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -16,59 +16,63 @@
             <nav>
             </nav>
             
-            <article>
-			    <form name = "opros" id='testForm' action='javascript: show();' onsubmit='return validate_form();' method="post">
-				    <div class = "main">
-				    <div class = "field">
-				    <label>Имя:</label>
-				     	<input class = "input-style" type = "text" name = "name" id = "name_" placeholder="Введите имя"/>
-						<br>					
-		
-					<label class="col-2 col-form-label">E-mail:</label>
-				        <input class = "input-style" type = "email"  name = "email" id = "e-mail" placeholder="Введите e-mail"/>
-				    <br>					
-					<label>Ваш пол?</label>
-					    <input class = "radio-style" type="radio" name = "rad" value = "male" checked="true"> мужской
-						<input class = "radio-style" type="radio" name = "rad" value = "female"> женский
-						<br>
-                    </div>              
-                        <br> 
-					<label>Ваш возраст?</label><br><br>	 
-					    <select name = "age" class = "input-style" id="prior">
-						    <option></option>
-  							<option value="do 18">До 18</option>
-  							<option value="18-25">18-25</option>
-  							<option value="26-35">26-35</option>
-  							<option value="36-45">36-45</option>
-  							<option value="46-55">46-55</option>
-  							<option value="56+">56+</option>
-						</select>	
-						<br>
-					<label>Какой жанр телепередач Вы предпочитаете:</label> 
-					<br><br>
-                        <input type="checkbox" name="choise" id="inter" value="interview" checked="true">Интервью<br>
-					    <input type="checkbox" name="choise" id="nw" value="news">Новости<br>
-						<input type="checkbox" name="choise" id="bs" value="brainstorm">Телевикторины<br>
-						<input type="checkbox" name="choise" id="fm" value="films">Фильмы и сериалы<br>
-						<input type="checkbox" name="choise" id="fn" value="fun">Развлекательные передачи<br>
-						<input type="checkbox" name="choise" id="ts" value="talkshow">Ток-шоу<br>
-						<input type="checkbox" name="choise" id="other_" value="Other">Не смотрю телепередачи<br>
-					<input id="datetime" type="date"> Время
-					<br><br>
-					<label>Оставьте комментарий:</label><br>
-					    <textarea name="comment" class = "textarea-style" placeholder="Комментарии..."></textarea><br>
-						<input type="submit" class = "button-style" onclick="return validate(this.form)" value="Отправить">
-                         <button class="color-button2" onclick="onclearbutton()" type="reset">Очистить форму</button>
-						
-                         
-					</div>					
-				</form>
-		    </article>
+	        <article>
+		        @using (Html.BeginForm("Send", "Home"))
+		        {
+			       <div class="main">
+				        <div class="field">
+					        <label>Имя:</label>
+					        <input class="input-style" type="text" name="name" placeholder="Введите имя" required="required"/>
+					        <br>
+
+					        <label class="col-2 col-form-label">E-mail:</label>
+					        <input class="input-style" type="email" name="email" placeholder="Введите e-mail" required="required"/>
+					        <br>
+					        <label>Ваш пол?</label>
+					        <input class="radio-style" type="radio" name="gender" value="male" checked="true"> мужской
+					        <input class="radio-style" type="radio" name="gender" value="female"> женский
+					        <br>
+				        </div>
+				        <br>
+				        <label>Ваш возраст?</label><br><br>
+				        <select name="age" class="input-style" id="prior">
+					        <option></option>
+					        <option value="do 18">До 18</option>
+					        <option value="18-25">18-25</option>
+					        <option value="26-35">26-35</option>
+					        <option value="36-45">36-45</option>
+					        <option value="46-55">46-55</option>
+					        <option value="56+">56+</option>
+				        </select>
+				        <br>
+				        <label>Какой жанр телепередач Вы предпочитаете:</label>
+				        <br><br>
+				        <input class="input-style" type="text" name="genre" required="required"><br><br>
+		        <!--        <input type="checkbox" name="choise" id="nw" value="news">Новости<br>
+		        <input type="checkbox" name="choise" id="bs" value="brainstorm">Телевикторины<br>
+		        <input type="checkbox" name="choise" id="fm" value="films">Фильмы и сериалы<br>
+		        <input type="checkbox" name="choise" id="fn" value="fun">Развлекательные передачи<br>
+		        <input type="checkbox" name="choise" id="ts" value="talkshow">Ток-шоу<br>
+		        <input type="checkbox" name="choise" id="other_" value="Other">Не смотрю телепередачи<br>
+		        -->
+				        <input name="data" type="date"> Время
+				        <br><br>
+				        <label>Оставьте комментарий:</label><br>
+				        <textarea name="comment" class = "textarea-style" placeholder="Комментарии..."></textarea><br>
+				        <input type="submit" class="button-style" value="Отправить">
+				        <button class="color-button2" onclick="onclearbutton()" type="reset">Очистить форму</button>
+
+			        </div> 
+		        }
+		<!--        <form name="opros" id='testForm' onsubmit='return validate_form();' method="post">
+			        
+		        </form> -->
+	        </article>
 <aside>
 </aside>
 
 </div>
 <footer>
-        <br>Gena Kotkovets, 2018 &copy;
+        <br>Gena Kotkovets & Egor Kirilenko, 2019 &copy;
     </footer>
     </body>
